# glib-utf8test

./: meson.build  utf8test.c
